# mt6883-cli-clf-command-center

./: Cargo.toml  README.md
aln/: mt6883_energy_core.aln
cli-core/: Cargo.toml
cli-core/src/: command.rs  lib.rs  parser.rs  registry.rs  router.rs
cli-shell/: Cargo.toml
cli-shell/src/: main.rs  prompt.rs  repl.rs
crates/baby-wasp-guard/src/: lib.rs
docs/: ATTRIBUTION
domain-core/: Cargo.toml
domain-core/src/: audit.rs  gdb.rs  lib.rs  modules.rs  plugins.rs  sessions.rs  users.rs
engines/: Cargo.toml
engines/src/: ai_engine.rs  bio_engine.rs  cloud_sync.rs  data_lake.rs  integrator_chat.rs  lib.rs
integrator-api/: Cargo.toml
integrator-api/src/: auth_flow.rs  chat_bridge.rs  lib.rs  telephony.rs
security/: Cargo.toml
security/src/: crypto.rs  lib.rs  mfa.rs  policy.rs
storage/: Cargo.toml
storage/src/: db_assets.rs  db_audit.rs  db_modules.rs  db_sessions.rs  db_users.rs  lib.rs
syscore/: ATTRIBUTION.sai
telephony/: Cargo.toml
telephony/src/: lib.rs  phone_profile.rs  qos.rs  routing.rs  signaling.rs
