[workspace]
members = [
    "cli-core",
    "cli-shell",
    "domain-core",
    "engines",
    "security",
    "storage",
    "integrator-api",
    "telephony",
]

[workspace.package]
edition = "2021"
license = "MIT"
name = "mt6883-cli-clf-command-center"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.19"
rand = "0.8"
crossterm = "0.27"
directories = "5.0"
ring = "0.17"
base64 = "0.22"
